shortened team member quote before and after to prevent scrollbars

--- a/app/styles/pages/team.scss
+++ b/app/styles/pages/team.scss
@@ -111,7 +111,7 @@
     content: "";
     position: absolute;
     height: 1px;
-    width: 300px;
+    width: 250px;
     background-color: $light-blue;
     display: block;
 }
